feat(admin-sandbox): Update layouts

--- a/packages/admin-sandbox/admin/index.css
+++ b/packages/admin-sandbox/admin/index.css
@@ -1,2 +1,3 @@
 @import "@contember/admin/index.css";
-@import "@contember/cms-layout/index.css";
+@import "@contember/brand/index.css";
+@import "@contember/layout/index.css";
