--- a/packages/ui/src/components/Dialog/Dialog.css
+++ b/packages/ui/src/components/Dialog/Dialog.css
@@ -33,6 +33,8 @@
 	justify-content: center;
 	align-items: center;
 	animation: cui-dialogIntro 0.1s forwards;
+	max-width: 100vw;
+	max-width: 100dvw;
 }
 
 :where(.cui-dialog)::before {
@@ -48,9 +50,9 @@
 
 :where(.cui-dialog-in) {
 	z-index: 51;
-	margin: 1em;
 	opacity: 0;
 	animation: cui-dialogIntroIn 0.2s 0.1s forwards;
+	max-width: inherit;
 }
 
 :where(.cui-dialog.view-immersive)::before {
