--- a/packages/layout/src/kit/ContentPanels.css
+++ b/packages/layout/src/kit/ContentPanels.css
@@ -9,9 +9,9 @@
 }
 
 :where(
-	.cui-layout-panel-header > .cui-layout-panel-header-content,
-	.cui-layout-panel-body > .cui-layout-panel-body-content,
-	.cui-layout-panel-footer > .cui-layout-panel-footer-content,
+	.cui-layout-panel-header:not([data-behavior="modal"]) > .cui-layout-panel-header-content,
+	.cui-layout-panel-body:not([data-behavior="modal"]) > .cui-layout-panel-body-content,
+	.cui-layout-panel-footer:not([data-behavior="modal"]) > .cui-layout-panel-footer-content,
 ) {
 	margin: auto;
 	max-width: var(--panel-max-width);
