--- a/packages/layout/src/kit/Toggles.css
+++ b/packages/layout/src/kit/Toggles.css
@@ -14,7 +14,7 @@
 	opacity: var(--cui-opacity--medium);
 }
 :where(.cui-toggle-sidebar-button:hover) {
-	opacity: var(--cui-opacity--strong);
+	opacity: var(--cui-opacity--opaque);
 }
 
 :where(
